syntax = "proto3";

message News {
    string id = 1;
    string title = 2;
    string body = 3;
    string postImage = 4;
}

service NewsService {
    rpc GetAllNews (Empty) returns (NewsList) {}
    rpc AddNews (News) returns (News) {}
    rpc DeleteNews (NewsId) returns (News) {}
    rpc EditNews (News) returns (News) {}
}

message Empty {}

message EditBody {
    News news =1;
}

message NewsList {
   repeated News news = 1;
}

message NewsId {
    string id = 1;
}

message NewsBody {
    string body = 1;
}

message NewsTitle {
    string title = 1;
}